objects/Spec_Item__c/Spec_Item__c.object-meta.xml
<CustomObject>
    <description>This is Spec Item object. It is child object of Creative Brief Template/ Specification Template object.</description>
    <label>Creative Spec Items</label>
    <nameField>
        <label>Spec Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spec Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>