objects/Spec_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <defaultValue>&quot;Enter Description here&quot;</defaultValue>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>