objects/Spec_Item__c/fields/Description_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Description_Picklist__c</fullName>
    <label>Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Job Spec Description</fullName>
            </value>
            <value>
                <fullName>Web Spec Description</fullName>
            </value>
            <value>
                <fullName>Spec Description</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>