objects/Spec_Item__c/fields/Spec_Item_picklist__c.field-meta.xml
<CustomField>
    <fullName>Spec_Item_picklist__c</fullName>
    <label>Spec Item</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web Spec</fullName>
            </value>
            <value>
                <fullName>Job Spec</fullName>
            </value>
            <value>
                <fullName>Spec Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>