objects/Spec_Item__c/fields/Specification_Template__c.field-meta.xml
<CustomField>
    <fullName>Specification_Template__c</fullName>
    <label>Specification Template</label>
    <referenceTo>Specification_Template__c</referenceTo>
    <relationshipName>Spec_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>